--- a/src/components/RestScreen.css
+++ b/src/components/RestScreen.css
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 10;
+    z-index: 50;
 }
 
 .rest-content {
